--- a/baabtra/prograamming/templates/sqr.html
+++ b/baabtra/prograamming/templates/sqr.html
@@ -7,6 +7,52 @@
     <title>Document</title>
 </head>
 <body>
-<h2>hheeyyy heyyyytybhj</h2>
+<h2> <table width="100%" cellspacing="0">
+    <tr style="background-color: snow;" >
+        <td width="65%" > <img src="/images/hilite logo.png" alt="" width="90"> <b></b></td>
+        <td>
+        <div style="color:rgb(201, 183, 25) ;" align="center">
+            <a href="http://hilitemall.com/" style="padding-right: 20px; ;"><b>HOME</b></a>
+            <a href="http://hilitemall.com/stores" style="padding-right: 20px; ;"><b>STORES</b></a>
+            <a href="http://hilitemall.com/offers" style="padding-right: 20px; ;"><b>OFFERS</b></a>
+            <a href="http://hilitemall.com/jobs" style="padding-right: 20px; ;"><b>JOBS</b></a>
+        </div>
+        </td>
+        
+
+    </tr>
+    
+    <tr style="background-color: whitesmoke;">
+    <td width="65%" align="center"> <img src="/images/hilite logo.png" width="500" alt="" >
+        </td>
+        <td>
+            <h1 align="center" style="font-size: 60px; color: rgb(201, 183, 25);">BRINGING THE <br> <b> WORLD TO YOU</b></h1> <hr>
+
+    </td>
+    
+    </tr> 
+
+    
+    
+    <tr align="center" >
+        <td >
+            <img src="/images/hilite 2.jpg" width="1000px" alt="">
+        </td>
+        <td>
+            <img src="/images/hilite 3.webp" alt="">
+        </td>
+    </tr>
+    <tr>
+        <td  style="color:rgb(201, 183, 25)  ;"><h1><b>Hilite Mall</b></h1> <hr></td>
+    </tr>
+    <tr>
+        <td style="color:rgb(201, 183, 25)  ;"><h3><b>HiLITE Mall</b> is a shopping mall located in the city of Kozhikode in the Malabar region of Kerala. HiLITE Mall is located in Palazhi bypass junction on the National Highway 66 bypass where the bypass meets Pottammal - Palazhi road. The shopping mall covers a total built-up area of 1,260,000 sq ft (117,000 m2) with 810,000 sq ft (75,000 m2) of retail space.[1] HiLITE Mall is being constructed as a part of the HiLITE City which has 3,200,000 sq ft (300,000 m2) in first phase and 10,000,000 sq ft (930,000 m2) in the second phase, an integrated township project from HiLITE Builders. The mall location is very close to the IT Parks (Government & ULCCS), which gives a decent footfalls during weekdays as well. The mall is being constructed in two phases, phase 1 is complete and phase 2 is under construction which is scheduled to complete by 2019 Q1. Phase 2 will include an eight screen multiplex and NESTO Hypermarket chain. Hi Lite Mall is a huge mall, where locals prefer spending the evenings. There is ample paid parking at the mall. There are outlets of many well known brands, a food court, supermarkets, departmental stores as well as various avenues for entertainment. There is something for every age group and the mall also provides a good option for tourists to pass the time.</h3></td>
+    </tr>
+
+   <tr>
+       <td> <h2 style="color:rgb(201, 183, 25)  ; " align="center"><b><i><u><a href="register2.html">CLICK TO REGISTER</a></u></i></b></h2>
+       </td>
+   </tr>
+</table></h2>
 </body>
 </html>
