--- a/prograamming/templates/sqr.html
+++ b/prograamming/templates/sqr.html
@@ -10,7 +10,7 @@
 <body>
     <h2> <table width="100%" cellspacing="0">
         <tr style="background-color: snow;" >
-            <td width="65%" > <img src="{% static 'images/hilite logo.png'%}" alt="" width="90"> <b></b></td>
+            <td width="65%" > <img src="{% static 'images/hilite logo.png' %}" alt="" width="90"> <b></b></td>
             <td>
             <div style="color:rgb(201, 183, 25) ;" align="center">
                 <a href="http://hilitemall.com/" style="padding-right: 20px; ;"><b>HOME</b></a>
@@ -24,7 +24,7 @@
         </tr>
         
         <tr style="background-color: whitesmoke;">
-        <td width="65%" align="center"> <img src="{% static 'images/hilite logo.png'%} width="500" alt="" >
+        <td width="65%" align="center"> <img src="{% static 'images/hilite logo.png' %}" width=500 alt="" >
             </td>
             <td>
                 <h1 align="center" style="font-size: 60px; color: rgb(201, 183, 25);">BRINGING THE <br> <b> WORLD TO YOU</b></h1> <hr>
@@ -37,10 +37,10 @@
         
         <tr align="center" >
             <td >
-                <img src="{% static 'images/hilite 2.jpg'%} width="1000px" alt="">
+                <img src="{% static 'images/hilite 2.jpg'%}" width=1000px alt="">
             </td> 
             <td>
-                <img src="{% static 'images/hilite 3.webp'%} width=" alt="">
+                <img src="{% static 'images/hilite 3.webp'%} " width=500px alt="">
             </td>
         </tr>
         <tr>
